# bgfx-wasm

./: .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  cube.cpp  cube.h  main.cpp  shader_compile.sh
shader/: f_simple.sc  v_simple.sc  varying.def.sc
webpage/: shell.html
